Relatórios Livros - fix locale output